- Compatibilizar com o JAVA v0.0.2b preview edition